--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,6 @@
     <link rel="stylesheet" href="/assets/css/style.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]>
-    <script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -57,10 +53,10 @@
 <div class="app-masthead">
     <div class="container">
         <nav class="app-nav">
-            <a class="app-nav-item active" href="#">Home</a>
-            <a class="app-nav-item" href="#">New features</a>
+            <a class="app-nav-item active" href="/#/">Home</a>
+            <a class="app-nav-item" href="#">Blog</a>
             <a class="app-nav-item" href="#">Press</a>
-            <a class="app-nav-item" href="#">Contact</a>
+            <a class="app-nav-item" href="/#/contact">Contact</a>
             <a class="app-nav-item" href="#">About</a>
         </nav>
     </div>
@@ -91,31 +87,20 @@
                 <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
                     fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
             </div>
+           <!--
             <div class="sidebar-module">
                 <h4>Archives</h4>
                 <ol class="list-unstyled">
-                    <li><a href="#">January 2014</a></li>
-                    <li><a href="#">December 2013</a></li>
-                    <li><a href="#">November 2013</a></li>
-                    <li><a href="#">October 2013</a></li>
-                    <li><a href="#">September 2013</a></li>
-                    <li><a href="#">August 2013</a></li>
-                    <li><a href="#">July 2013</a></li>
-                    <li><a href="#">June 2013</a></li>
-                    <li><a href="#">May 2013</a></li>
-                    <li><a href="#">April 2013</a></li>
-                    <li><a href="#">March 2013</a></li>
-                    <li><a href="#">February 2013</a></li>
+       
                 </ol>
             </div>
             <div class="sidebar-module">
                 <h4>Elsewhere</h4>
                 <ol class="list-unstyled">
-                    <li><a href="#">GitHub</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
+                
                 </ol>
             </div>
+            -->
         </div>
         <!-- /.app-sidebar -->
 
@@ -126,11 +111,7 @@
 <!-- /.container -->
 
 <div class="app-footer">
-    <p>SAR Template by <a href="https://twitter.com/mdo">@svenardocom</a>.</p>
-
-    <p>
-        <a href="#">Back to top</a>
-    </p>
+    <p>Template by <a href="https://twitter.com/mdo">@svenardocom</a>.</p>
 </div>
 
 
